# archlinux-checkupdates-external

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: linter.yml  rust.yml
crates/aur/: Cargo.toml
crates/aur/src/: fetch.rs  lib.rs  model.rs  tests.rs
crates/chrome/: Cargo.toml
crates/chrome/src/: fetch.rs  lib.rs  tests.rs
crates/edge/: Cargo.toml
crates/edge/src/: fetch.rs  lib.rs  model.rs  tests.rs
crates/jetbrains/: Cargo.toml
crates/jetbrains/src/: fetch.rs  lib.rs  model.rs  print.rs  tests.rs
crates/mongodb/: Cargo.toml
crates/mongodb/src/: fetch.rs  lib.rs  tests.rs
crates/teamviewer/: Cargo.toml
crates/teamviewer/src/: fetch.rs  lib.rs  tests.rs
crates/yum/: Cargo.toml
crates/yum/src/: fetch.rs  lib.rs  model.rs  print.rs  tests.rs
src/: main.rs
src/aur/: fetch.rs  model.rs
src/chrome/: fetch.rs  mod.rs  model.rs  print.rs
src/edge/: fetch.rs  model.rs
src/jetbrains/: fetch.rs  mod.rs  model.rs  print.rs
src/yum/: fetch.rs  mod.rs  print.rs
