[package]
name = "checkupdates-external"
version = "0.1.0"
authors = ["Axel Navarro <navarroaxel@gmail.com>"]
edition = "2018"

[dependencies]
aur = {path = "crates/aur" }
chrome = { path = "crates/chrome" }
edge = { path = "crates/edge" }
jetbrains = { path = "crates/jetbrains" }
yum = {path = "crates/yum" }

futures = "0.3.15"
reqwest = { version = "0.11.3", features = ["json", "gzip"] }
tokio = { version = "1.6.0", features = ["full"] }
