[package]
name = "checkupdates-external"
version = "0.1.0"
authors = ["Axel Navarro <navarroaxel@gmail.com>"]
edition = "2018"
repository =  "https://github.com/navarroaxel/archlinux-checkupdates-external"
homepage =  "https://github.com/navarroaxel/archlinux-checkupdates-external"
readme = "README.md"

[dependencies]
aur = { path = "crates/aur" }
chrome = { path = "crates/chrome" }
edge = { path = "crates/edge" }
jetbrains = { path = "crates/jetbrains" }
mongodb = { path = "crates/mongodb" }
teamviewer = { path = "crates/teamviewer" }
yum = { path = "crates/yum" }

futures = "0.3.19"
reqwest = { version = "0.11.9", features = ["json", "gzip"] }
tokio = { version = "1.16.1", features = ["full"] }
