[package]
name = "checkupdates-external"
version = "0.1.0"
authors = ["Axel Navarro <navarroaxel@gmail.com>"]
edition = "2021"
repository =  "https://github.com/navarroaxel/archlinux-checkupdates-external"
homepage =  "https://github.com/navarroaxel/archlinux-checkupdates-external"
readme = "README.md"

[dependencies]
aur = { path = "crates/aur" }
chrome = { path = "crates/chrome" }
edge = { path = "crates/edge" }
jetbrains = { path = "crates/jetbrains" }
mongodb = { path = "crates/mongodb" }
teamviewer = { path = "crates/teamviewer" }
yum = { path = "crates/yum" }

clap = { version = "4.5", features = ["derive"] }
futures = "0.3.21"
reqwest = { version = "0.12.19", features = ["gzip", "json"] }
tokio = { version = "1.45", features = ["full"] }
