[package]
name = "aur"
version = "0.1.0"
authors = ["Axel Navarro <navarroaxel@gmail.com>"]
edition = "2021"

[lib]

[dependencies]
futures = "0.3.31"
reqwest = { version = "0.12.19", features = ["gzip", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
