[package]
name = "jetbrains"
version = "0.1.0"
authors = ["Axel Navarro <navarroaxel@gmail.com>"]
edition = "2021"

[lib]

[dependencies]
aur = { path = "../aur" }

reqwest = { version = "0.13.1", features = ["gzip", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-xml-rs = "0.8.2"
