[package]
name = "yum"
version = "0.1.0"
authors = ["Axel Navarro <navarroaxel@gmail.com>"]
edition = "2021"

[lib]

[dependencies]
aur = { path = "../aur" }

itertools = "0.13.0"
libflate = "2.1.0"
reqwest = { version = "0.12.8", features = ["gzip", "json"] }
semver = "1.0.23"
serde = { version = "1.0.213", features = ["derive"] }
serde-xml-rs = "0.6.0"
